0.83.10
  - Added abliity to resolve file paths that include
    environment variables on Windows or tildes (~) on
    other platforms for various options in the config
    file, such as language and mapper file paths, MT32
    ROM & FluidSynth soundfont paths, [config] section
    options as well as file outputs for the printing
    and serial/parallel port functions. (Wengier)
  - Added calculator for DOS (EVAL.EXE), which appears
    on Z drive and can calculate both simple (such as
    sin(0) and cos(0)) and many advanced mathematical
    expressions in either command-line mode and or the
    interactive mode. (Wengier)
  - Added support for standard (VGA/EGA/CGA) and mono
    mode dual-screen setup by porting the patch. You
    can now start DOSBox-X with the option -display2
    followed by a color (white, green, amber) to enable
    this feature on debug builds. (Wengier)
  - You can now translate texts in DOSBox-X's drop-down
    menus. The message files as written by the config
    tool (CLI or GUI) will contain the menu texts for
    translations from the English language. (Wengier)
  - Added "bannercolortheme" config option (in [dosbox]
    section) so that users can change the background
    color theme of the welcome banner from the default
    blue color when DOSBox-X starts. (Wengier)
  - Added "pcaptimeout" config option (in the [ne2000]
    section) to specify a read timeout value for pcap
    in milliseconds, or default value (-1 on Windows
    or 3000 otherwise) will be used. (Wengier & Jookia)
  - Added "Save & Restart" button to the Configuration
    Tool's "Save" option for saving the config file and
    then automatically restarting DOSBox-X with this
    saved configuration. Command-line options -wcboot,
    -wcdboot and -wcpboot are added to CONFIG command
    which resemble -wc, -wcd, and -wcp options but will
    reboot DOSBox-X after writing configfile. Command-
    line option -bc (-bootconf) is also added to reboot