@@ -124,6 +124,7 @@ struct SDL_Block {
         bool prevent_fullscreen = false;
         bool lazy_fullscreen_req = false;
         bool doublebuf = false;
+        bool isperfect = false;
         SCREEN_TYPES type = (SCREEN_TYPES)0;
         SCREEN_TYPES want_type = (SCREEN_TYPES)0;
     } desktop;
