@@ -325,6 +325,7 @@ static const char *def_menu_video_output[] =
 #if defined(C_OPENGL) && !defined(HX_DOS)
     "output_opengl",
     "output_openglnb",
+    "output_openglpp",
 #endif
 #if defined(USE_TTF)
     "output_ttf",
